--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,7 @@ h3 {
 }
 
 h1 {
+    font-size: clamp(3rem, 6vw, 5rem);
     line-height: 1.1;
     letter-spacing: 0.02em;
     font-weight: 400;
