--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,15 +107,11 @@ h3 {
 }
 
 h1 {
-    font-size: clamp(3rem, 6vw, 5rem);
+    font-size: 5rem;
     line-height: 1.1;
     letter-spacing: 0.02em;
     font-weight: 400;
     color: var(--color-white);
-}
-
-.hero-title {
-    font-size: clamp(3rem, 6vw, 5rem);
 }
 
 h2 {
@@ -154,6 +150,10 @@ h3 {
     .section {
         padding-top: 90px;
         padding-bottom: 90px;
+    }
+
+    h1 {
+        font-size: 3rem;
     }
 }
 
