--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ h3 {
 }
 
 .hero-title {
-    font-size: 5rem;
+    font-size: clamp(3rem, 6vw, 4.5rem);
     line-height: 1.1;
     letter-spacing: 0.02em;
     font-weight: 700;
@@ -117,7 +117,6 @@ h3 {
     text-align: center;
     margin: 0 auto;
 }
-
 
 h2 {
     font-size: clamp(1.5rem, 3.5vw, 2.375rem);
@@ -144,12 +143,6 @@ h3 {
     padding-bottom: 140px;
 }
 
-@media screen and (max-width:1024px) {
-    .hero-title {
-        font-size: 6vw;
-        max-width: 576px;
-    }
-}
 
 @media screen and (max-width:992px) {
     .section {
@@ -162,10 +155,6 @@ h3 {
     .section {
         padding-top: 90px;
         padding-bottom: 90px;
-    }
-
-    .hero-title {
-        font-size: 3rem;
     }
 }
 
