--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -735,6 +735,7 @@ h3 {
     height: 100%;
     width: 100%;
     padding: 1rem;
+    background-color: #ddd;
 }
 
 .global-reach__map img {
@@ -743,7 +744,7 @@ h3 {
     max-width: 100%;
     max-height: 620px;
     z-index: 1;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 
